feat: migration text area component to JFoenix (#142)